# bioresearch

./: .gitignore  .prettierignore  Dockerfile  Makefile  README.md  __init__.py  blog.md  client.py  evaluate.py  inference.py  models.py  openenv.yaml  playground.py  pyproject.toml  training_a100.py  training_colab_pro.py  training_core.py  training_core_unsafe.py
.github/workflows/: ci.yml
data/: DNA_reasoning.json  PertubationQA_language_gse_gene.json  PertubationQA_language_gse_pert.json  PertubationQA_language_pert_de.json  PertubationQA_language_pert_dir.json  Protein_data.json  Protien_catalogue.json  Protien_data_2.json  Protien_sft_reasoning.json  Protien_sft_reasoning_2.json  SMILES_top1000_drug_discovery.json  diagnosis_training_data.json  drug_discovery_hetionet.json  kegg_reasoning.json  kegg_reasoning_2.json  literature.json  protein_catalogue_bridge.json
knowledgebase/: bioreseach.md  blog.md  blog_draft.md  brief.md  environments.md  improvement.md  info.md  pitch.md  plan.md  requirements.md  structure.md  task.md  training_guide.md  video_script.md
notebooks/: evaluation.ipynb  train_grpo.ipynb  train_grpo_a100.ipynb  train_grpo_colab.ipynb  train_grpo_colab_pro.ipynb  train_grpo_inference_mirror.ipynb  train_grpo_l4.ipynb  train_grpo_l40s.ipynb  train_grpo_t4.ipynb
openenv_bioresearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: __init__.py  actors.py  app.py  bioresearch_environment.py  data_loader.py  graders.py  tools.py
tests/: test_actors.py  test_environment.py  test_graders.py  test_tools.py  test_training_a100.py  test_training_core.py  test_tumor_board.py
