[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bioresearch"
version = "0.1.0"
description = "Biological reasoning environment for OpenEnv — DNA mutation analysis, protein function prediction, and GRPO-compatible reward design"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]
playground = [
    "gradio>=4.0.0",
]

[project.scripts]
server = "bioresearch.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["bioresearch", "bioresearch.server"]
package-dir = { "bioresearch" = ".", "bioresearch.server" = "server" }
